# vgmp

./: .gitignore  .gitmodules  LICENSE  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/org/vlessert/vgmp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FF7_psf.rar
app/src/main/cpp/: CMakeLists.txt  libvgm  prepare_libkss_source.sh  prepare_libvgm_source.sh  vgmplayer_jni.cpp
app/src/main/cpp/patches/: libkss-spectrum.patch  libpsf-android64-fixes.patch  libpsf-threading-fixes.patch  libvgm-set-device-volume.patch
app/src/main/java/org/vlessert/vgmp/: MainActivity.kt  VgmApplication.kt
app/src/main/java/org/vlessert/vgmp/download/: DownloadWorker.kt
app/src/main/java/org/vlessert/vgmp/engine/: VgmEngine.kt
app/src/main/java/org/vlessert/vgmp/service/: VgmPlaybackService.kt
app/src/main/java/org/vlessert/vgmp/settings/: SettingsManager.kt
app/src/main/java/org/vlessert/vgmp/ui/: DownloadDialogFragment.kt  KaleidoscopeView.kt  LibraryFragment.kt  NowPlayingFragment.kt  SettingsDialogFragment.kt  SnesMusicWebViewFragment.kt  SpectrumBarsView.kt  SpectrumView.kt  VgmRipsSearchFragment.kt
app/src/main/java/org/vlessert/vgmp/ui/views/: ChannelSpectrumView.kt
app/src/main/java/org/vlessert/vgmp/vgmrips/: VgmRipsPack.kt  VgmRipsRepository.kt
app/src/main/res/drawable/: art_background.xml  game_selected_bg.xml  ic_album_placeholder.xml  ic_auto_icon.xml  ic_bass.xml  ic_download.xml  ic_export.xml  ic_infinity.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_loop.xml  ic_music_note.xml  ic_pause.xml  ic_random.xml  ic_reverb.xml  ic_settings.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_speed.xml  ic_star.xml  ic_star_border.xml  ic_volume_off.xml  ic_volume_solo.xml  ic_volume_up.xml  search_bg.xml  toast_background.xml  track_active_bg.xml  track_normal_bg.xml
app/src/main/res/layout/: activity_main.xml  custom_toast.xml  fragment_download.xml  fragment_library.xml  fragment_now_playing.xml  fragment_settings.xml  fragment_vgmrips_search.xml  item_channel.xml  item_chip_spinner.xml  item_chip_spinner_dropdown.xml  item_chip_volume.xml  item_download_source.xml  item_game.xml  item_track.xml  item_vgmrips_pack.xml  item_vu_meter.xml  layout_mini_player.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/vlessert/vgmp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
